classDiagram
    class ItemDefinition {
        +string ItemId
        +string DisplayName
        +ItemType Type
    }

    class Inventory {
        +AddItem(itemId)
        +ConsumeItem(itemId)
        +HasItem(itemId) bool
    }

    class IInteractable {
        <<interface>>
        +Interact(context)
    }

    class IItemUsageHandler {
        <<interface>>
        +CanHandle(sourceId, targetId)
        +Apply(source, target, context)
    }

    class InteractionResolver {
        +TryUseItemOnTarget(sourceId, targetId, context)
    }

    class RoomStateController {
        +SetState(objectId, newState)
        +GetState(objectId)
    }

    class EscapeRoomController {
        +TryInteract(target)
        +TryUseItemOn(itemId, targetId)
    }

    class IRoomItem {
        <<interface>>
        +Accept(IRoomItemVisitor)
    }

    class IRoomItemVisitor {
        <<interface>>
        +VisitPickup(PickupInteractable)
        +VisitNote(NoteInteractable)
        +VisitDrawer(DrawerInteractable)
        +VisitDoor(DoorInteractable)
        +VisitSafe(SafeInteractable)
        +VisitDecoy(DecoyInteractable)
    }

    class InspectVisitor
    class InventoryReportVisitor
    class UseOnTargetVisitor

    class DrawerInteractable
    class SafeInteractable
    class DoorInteractable
    class PickupInteractable
    class NoteInteractable

    Inventory <-- EscapeRoomController
    InteractionResolver <-- EscapeRoomController
    RoomStateController <-- EscapeRoomController
    IInteractable <|.. DrawerInteractable
    IInteractable <|.. SafeInteractable
    IInteractable <|.. DoorInteractable
    IInteractable <|.. PickupInteractable
    IInteractable <|.. NoteInteractable
    IRoomItem <|.. DrawerInteractable
    IRoomItem <|.. SafeInteractable
    IRoomItem <|.. DoorInteractable
    IRoomItem <|.. PickupInteractable
    IRoomItem <|.. NoteInteractable
    IItemUsageHandler <|.. KeyOnDrawerHandler
    InteractionResolver o-- IItemUsageHandler
    EscapeRoomController --> IInteractable
    IRoomItemVisitor <|.. InspectVisitor
    IRoomItemVisitor <|.. InventoryReportVisitor
    IRoomItemVisitor <|.. UseOnTargetVisitor
    IRoomItem --> IRoomItemVisitor : Accept
    EscapeRoomController --> IRoomItemVisitor : I / R / use
